adding workflow creds

--- a/.github/workflows/rest-assured.yml
+++ b/.github/workflows/rest-assured.yml
@@ -8,6 +8,11 @@ on:
   pull_request:
     branches: [ "master" ]
 
+env:
+  RESTBOOKER_USERNAME: ${{secrets.RESTBOOKER_USERNAME}
+  RESTBOOKER_PASSWORD: ${{secrets.RESTBOOKER_PASSWORD}
+
+
 jobs:
   build:
 
