update workflow creds

--- a/.github/workflows/rest-assured.yml
+++ b/.github/workflows/rest-assured.yml
@@ -9,8 +9,8 @@ on:
     branches: [ "master" ]
 
 env:
-  RESTBOOKER_USERNAME: ${{secrets.RESTBOOKER_USERNAME}
-  RESTBOOKER_PASSWORD: ${{secrets.RESTBOOKER_PASSWORD}
+  RESTBOOKER_USERNAME: ${{secrets.RESTBOOKER_USERNAME}}
+  RESTBOOKER_PASSWORD: ${{secrets.RESTBOOKER_PASSWORD}}
 
 
 jobs:
