--- a/.github/workflows/rest-assured.yml
+++ b/.github/workflows/rest-assured.yml
@@ -33,4 +33,4 @@ jobs:
       uses: actions/upload-artifact@v4.6.2
       with:
         name: allure-results
-        path: allure-results
+        path: allure-results/
